--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,11 +1,19 @@
-$profileLeafSize: 120px;
-$leafSpacing: 24px;
-$lineColor: lighten(gray, 35%);
-$navHeight: 80px;
-$maxWidthProfileInfo: 352px;
-$borderWidth: 8px;
-$leafCaptionOffset: 12px;
-$lineExtension: 24px;
+$detailsRevealTiming: .2s;
+
+:root {
+    --brand: #002831;
+    --brand_lighter: #EAF1F3;
+    --navHeight: 104px;
+    --detailsWidth: 352px;
+    --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
+    --iconButtonSize: 44px;
+    --color_border: #D9DFE0;
+    --leafSize: 96px;
+}
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Lato', san-serif;
@@ -13,698 +21,284 @@ body {
     flex-direction: column;
     padding: 0;
     margin: 0;
-    // overflow: hidden;
-}
+    display: flex;
+    flex-direction: column;
+};
 
-ul {
+ul,
+ol {
     margin: 0;
     padding: 0;
 }
 
-.u-w_full {
-    width: 100%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    &:first-child {
+        margin-top: 0;
+    }
 }
 
+.ifAuth--hide {
+    display: none;
+}
+
+.ifAuth--show {
+    display: inherit;
+}
+
+nav {
+    display: flex;
+    background-color: var(--brand);
+    height: var(--navHeight);
+    max-height: var(--navHeight);
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    color: white;
+    align-items: center;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+#mainContent {
+    display: flex;
+    position: relative;
+    flex: 1;
+    
+    &:not(.showDetails) {
+        #familyTree {
+            margin-right: 0;
+        }
+
+        #detailsPanel {
+            right: calc( (var(--detailsWidth) * -1 ));
+        }
+    }
+
+    &.showDetails {
+        #familyTree {
+            margin-right: var(--detailsWidth);
+        }
+
+        #detailsPanel {
+            right: 0;
+        }
+    }
+}
+
+#familyTree {
+    box-shadow: 0 0 0 4px lighten(red, 35%) inset;
+    flex: 1;
+    transition: margin-right $detailsRevealTiming ease-in-out;
+    overflow: scroll;
+}
+
+#detailsPanel {
+    position: fixed;
+    width: 100%;
+    max-width: var(--detailsWidth);
+    height: calc(100vh - var(--navHeight));
+    padding: 32px;
+    transition: right$detailsRevealTiming ease-in-out;
+    top: var(--navHeight);
+    bottom: 0;
+    border-radius: 8px 0 0 8px;
+    box-shadow: 0 0 12px rgba(black, .2), 0 0 4px rgba(black, .1);
+    z-index: 99;
+    background-color: white;
+}
+
+#treeMenu {
+    border: 1px solid green;
+    position: absolute;
+    left: 0;
+    right: 0;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+
+    .primary {
+        border: 1px solid purple;
+    }
+
+    .active {
+        color: darkslateblue;
+    }
+}
+
+.leaf {
+    height: var(--leafSize);
+    width: var(--leafSize);
+    border-radius: 50%;
+    box-shadow: 0 0 12px rgba(black, .2);
+    cursor: pointer;
+
+    &.active {
+        box-shadow: 0 0 0 8px blue;
+    }
+
+    > * {
+        pointer-events: none;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    :root {
+        --navHeight: 176px;
+        --detailsWidth: 100%;
+    }
+    
+    #familyTree {
+        width: 100%;
+    }
+
+    #detailsPanel {
+        left:0;
+        right: 0;
+        bottom: calc(-100vh - var(--navHeight));
+        top: unset;
+        transition: bottom $detailsRevealTiming ease-in-out;
+        max-height: calc(100vh - (var(--navHeight) + 40px));
+    }
+
+    #mainContent {  
+        &:not(.showDetails) {    
+            #detailsPanel {
+                right: unset;
+            }
+        }
+    
+        &.showDetails {
+            #familyTree {
+                margin-right: 0;
+            }
+    
+            #detailsPanel {
+                right: unset;
+                bottom: 0;
+            }
+        }
+    }  
+}
+
+// inputs
+input[type=text],
+input[type=email],
+input[type=password],
+input[type=number],
+select {
+    padding: 16px 12px;
+    border: 1px solid var(--color_border);
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+// button
+.button,
 button,
-.button {
-    padding: 12px;
-    background-color: #333333;
-    border: 0px solid transparent;
-    font-size: 1rem;
+.iconButton {
+    padding: 12px 16px;
+    background-color: var(--brand);
     border-radius: 8px;
     color: white;
-    cursor: pointer;
-    text-decoration: none;
-    display: inline-block;
-}
-
-input,
-select {
-    padding: 0 8px;
-    margin-bottom: 1rem;
-    line-height: 3rem;
-    font-size: .875em;
-
-    &[disabled] {
-        opacity: .5;
-    }
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="number"],
-input[type="date"] {
-    width: 100%;
-    border-radius: 8px;
-    border: 1px solid #e5e5e5;
-}
-
-.checkbox-group {
-    display: flex;
-}
-
-fieldset {
-    padding: 0;
     border: 0px solid transparent;
-}
-
-img {
-    max-width: 100%;
-    background-color: #FDD3A6;
-}
-.navigation {
-    position: absolute;
-    right: 24px;
-    top: 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-
-    .userEmail {
-        margin-right: 16px;
-    }
-}
-
-.modal {
-    position: fixed;
-    top: 35%;
-    left: 50%;
-    right: 50%;
-    width: 100%;
-    max-width: 500px;
-    margin: 0 auto;
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(black, .2);
-    padding: 24px;
-    z-index: 9999;
-    background-color: white;
-    transform: translate(-50%, -50%);
-}
-
-#connectionLines {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.directMembers,
-.descendants,
-.familyTree,
-.profileLeaf,
-.contentContainer {
     display: flex;
     justify-content: center;
-}
-
-.mainContent {
-    flex: 1;
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    min-width: 50%;
-}
-
-.familyTree {
-    max-width: 100vw;
-    padding: 16px;
-    justify-content: center;
-    max-height: calc(100vh - #{$navHeight});
-    transition: transform .2s ease-in-out;
-    transform-origin: center top;
-
-    // overflow: scroll;
-
-    > .branch + .branch {
-        margin-left: $profileLeafSize;
-    }
-
-    &:empty {
-        display: none;
-    }
-
-    
-    &.list {
-        display: flex;
-
-        .directMembers,
-        .descendants,
-        .familyTree,
-        .profileLeaf,
-        .contentContainer {
-            display: block;
-        }
-
-        .profileLeaf {
-            height: 96px;
-            width: 96px;
-
-            &.spouse {
-                margin-left: 32px;
-                margin-top: -48px;
-            }
-
-            &__caption {
-                left: 100%;
-                top: 50%;
-                bottom: initial;
-            }
-        }
-
-        .branch .descendants {
-            margin-left: 80px;
-        }
-    }
-}
-
-.directMembers {
-    justify-content: center;
-}
-
-.descendants {
-    // Nothing
-}
-
-.authenticationContainer {
-    max-width: 420px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    
-    > * {
-        padding: 16px;
-    }
-}
-
-.profileLeaf {
     cursor: pointer;
-    z-index: 2;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: $profileLeafSize;
-    height: $profileLeafSize;
-    font-size: .875em;
-    text-align: center;
-    margin: $leafSpacing;
-    position: relative;
-    animation: bounceIn .5s ease-in-out;
-    transform-origin: center;
-    transition: all .2s ease-in-out;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Opera and Firefox */
+    font-weight: bold;
+    font-size: 15px;
 
-    &:hover {
-        z-index: 99;
+    &.secondary {
+        background-color: var(--brand_lighter);
+        color: var(--brand);
     }
 
-    &__image {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: top;
-        border-radius: 50%;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        pointer-events: none;
-    }
-
-    &__caption {
-        position: absolute;
-        bottom: -$leafCaptionOffset;
-        box-shadow: 0 1px 4px rgba(0,0,0,.2);
-        padding: 8px 12px;
+    &.white {
         background-color: white;
-        border-radius: 8px;
-        min-width: 50%;
-        margin: 0 auto;
-        white-space: nowrap;
-        pointer-events: none;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        max-width: 72%;
-        overflow: hidden;
-    }
-
-    &__info {
-        display: none;
-    }
-
-    // &__connection {
-    //     position: absolute;
-    //     width: 100%;
-    //     height: 100%;
-    //     left: 0;
-    //     right: 0;
-    //     top: -12px;
-    //     bottom: 0;
-    //     z-index: -1;
-
-    //     &:before {
-    //         content: "";
-    //         position: absolute;
-    //         width: 1px;
-    //         height: calc(100% + (#{$leafSpacing} * 2));
-    //         top: -(#{$leafSpacing} - 8px);
-    //         background-color: red;
-    //     }
-
-    //     &:after {
-    //         content: "";
-    //         position: absolute;
-    //         top: 0;
-    //         left: 50%;
-    //         transform: translateX(-50%);
-    //         height: 1px;
-    //         background-color: green;
-    //         width: 100%;
-    //     }
-    // }
-
-    // &__name {
-    //     width: 100%;
-    // }
-
-    &.you {
-        .profileLeaf__caption {
-            font-weight: 900;
-        }
-    }
-
-    &.claimed {
-        border: 1px solid cyan;
-    }
-
-    &.selected {
-        transform: scale3d(1.1,1.1,1.1);
-        box-shadow: 0 4px 10px rgba(0,0,0,.15),
-                    0 1px 24px rgba(0,0,0,.1),
-                    0 0 0 8px blue inset;
-    }
-
-    &.spouse {
-        z-index: 1;
-        margin-left: -$leafSpacing - 16px;
-    }
-
-    &__connectors {
-        position: absolute;
-        z-index: 1;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-
-        &:before,
-        &:after {
-            z-index: 1;
-            content: "";
-            position: absolute;
-            background-color: $lineColor;
-        }
-
-        &:before {
-            height: $leafSpacing;
-            width: 1px;
-            bottom: -$leafSpacing;
-        }
-
-        &:after {
-            width: $profileLeafSize + $leafSpacing*2;
-            height: 1px;
-            bottom: -$leafSpacing;
-        }
-
-        .familyTree > .branch > .descendants .branch & {
-            &:before {
-                top: -$leafSpacing;
-            }
-    
-            &:after {
-                width: $profileLeafSize + $leafSpacing*2;
-                height: 1px;
-                top: -$leafSpacing;
-            }
-        }
-
-        .descendants .branch:last-child & {
-            &:after {
-                content: none;
-            }
-        }
-    }
-}
-
-.treeName {
-    margin: 0 auto;
-    text-align: center;
-    font-weight: 900;
-    font-size: 1.25rem;
-    padding: 48px;
-
-    a {
-        margin: 0 8px;
-    }
-}
-
-.disabled {
-    opacity: .5;
-    pointer-events: none;
-}
-
-.branch {
-    position: relative;
-
-    // .profileLeaf__connection {
-    //     pointer-events: none;
-    // }
-
-    // .descendants .branch {
-    //     &:first-child .profileLeaf {
-    //         .profileLeaf__connection {
-    //             &:after {
-    //                 left: 100%;
-    //             }
-    //         }
-
-    //         // &:only-child {
-    //         //     .profileLeaf__connection {
-    //         //         &:after {
-    //         //             left: 100%;
-    //         //         }
-    //         //     }
-    //         // }
-    //     }
-
-    //     &:last-child {
-    //         .profileLeaf__connection {
-    //             &:after {
-    //                 left: unset;
-    //                 right: 0;
-    //             }
-    //         }
-    //     }
-    // }
-
-    // > .directMembers {
-    //     > .profile_leaf {
-    //         z-index: 2;
-
-    //         &:before {
-    //             content: "";
-    //             position: absolute;
-    //             width: 1px;
-    //             height: $leafSpacing;
-    //             background-color: $lineColor;
-    //             top: -$leafSpacing;
-    //             z-index: -1;
-    //         }
-    //     }
-    // }
-
-    .branch {
-        // border-top: 1px solid $lineColor;
-    }
-}
-
-.actions {
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    .actions_dropdown {
-        display: none;
-        position: absolute;
-        background-color: white;
-        min-width: 160px;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(black, .1);
-        z-index: 1;
-        text-align: left;
-        padding: 8px 0;
-
-        &.show {
-            display: block;
-        }
-
-        &:empty {
-            display: none;
-        }
-
-
-        > [class*="option"],
-        [class*="action"] {
-            padding: 8px 16px;
-
-            &:hover {
-                background-color: rgba(black, .05);
-                cursor: pointer;
-            }
-
-            &:active {
-                background-color: rgba(black, .08);
-            }
-        }
-    }
-
-}
-
-[data-menu-for="actions_add_member"] {
-    position: absolute;
-    left: 40px;
-    top: -3px;
-    display: none;
-    padding: 8px;
-    border: 1px solid rgba(0,0,0,.2);
-    border-radius: 8px;
-    background-color: white;
-    box-shadow: 0 2px 10px rgba(0,0,0,.1);
-    z-index: 10;
-
-    &.show {
-        display: block;
+        color: var(--brand);
     }
 }
 
 .iconButton {
-    width: 44px;
-    height: 44px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 0 auto;
+    padding: 0;
+    width: var(--iconButtonSize);
+    height: var(--iconButtonSize);
+    line-height: var(--iconButtonSize);
+    font-size: 20px;
     border-radius: 50%;
-}
+    align-items: center;
 
-.viewPref {
-    position: absolute;
-    bottom: 48px;
-    right: 48px;
-    z-index: 999;
-    
-    > * {
-        margin: 8px;
+    i {
+        line-height: var(--iconButtonSize);
+        pointer-events: none;
     }
 }
 
-nav {
-    padding: 16px;
-    width: 100%;
-    position: sticky;
+// modal
+.modal {
+    position: fixed;
     top: 0;
     left: 0;
-    box-shadow: none;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba( black, .35);
     display: flex;
-    background-color: transparent;
-    color: gray;
-    z-index: 99;
-    align-items: center;
-    height: $navHeight;
-    background: linear-gradient(#fff, #fff);
-}
+    justify-content: center;
 
-.add-member-menu {
-    background-color: white;
-    box-shadow: 0 2px 8px rgba(0,0,0,.2);
-    border-radius: 8px;
-    right: -58px;
-    top: 62px;
-    position: absolute;
-    z-index: 999;
-
-    li {
-        padding: 4px 8px;
-        text-align: left;
-
-        &:hover {
-            background-color: rgba(black, .05);
-            cursor: pointer;
+    &.medium {
+        .modal-dialouge  {
+            max-width: 480px;
         }
     }
-}
 
-.contentContainer {
-    flex: 1;
-    position: relative;
-    max-height: 100vh;
-
-    &:focus {
-        outline: none;
-    }
-}
-
-.profileInfo {
-    bottom: 0;
-    top:0;
-    right: 0;
-    z-index: 99;
-    width: 0%;
-    max-width: $maxWidthProfileInfo;
-    transform: translateX(100%);
-    transition: all .2s ease-in-out; 
-    height: 100%;
-
-    &__container {
-        border-radius: 8px 0 0 8px;
-        background-color: white;
-        box-shadow: 0px 4px 32px rgba(black, 0.16),
-        0px 2px 4px rgba(black, 0.16);
-        height: 100%;
-        position: relative;
-        overflow: scroll;
-        max-height: 100vh;
+    &.small {
+        .modal-dialouge  {
+            max-width: 320px;
+        }
     }
 
-    &__header {
-        padding: 24px;
-        position: sticky;
-        box-shadow: 0 2px 8px rgba(0,0,0,.1);
-        background-color: white;
-        z-index: 2;
-        top: 0;
-    }
-
-    &__footer {
-        padding: 24px;
-        position: sticky;
-        bottom: 0;
-        box-shadow: 0 -2px 8px rgba(0,0,0,.1);
-        background-color: white;
-    }
-
-    &__body {
-        padding: 24px;
-    }
-
-    &__name {
-        // font-size: 18px;
-    }
-
-    &__close,
-    &__edit {
-        width: 44px;
-        height: 44px;
-        display: flex;
-        justify-content: center;
-        align-items: center; 
-        border-radius: 100px;
+    .modal-dialouge {
         position: absolute;
-        top: 12px;
-        right: 24px;
-        border: none;
-        cursor: pointer;
-        font-size: 18px;
-        z-index: 3;
-        margin-left: auto;
+        top: calc(30vh - 5vh);
+        max-width: 600px;
+        width: 100%;
+        padding: 32px;
+        border-radius: 16px;
+        box-shadow: 0 0 12px rgba(black, .2);
+        background-color: white;
     }
 
-    &__edit {
-        right: 44px + 24px + 8px;
-    }
-
-    &__image {
+    &:not(.open) {
         display: none;
-        width: 100%;
-        object-fit: cover;
-        object-position: top;
-        height: 280px;
+        pointer-events: none;
     }
 
-    &__imageContainer {
-        position: relative;
-        z-index: 1;
+    &.open {
+        pointer-events: initial;
     }
 
-    &__imageUploadButton {
+    .modal_button--close.iconButton {
         position: absolute;
-        bottom: 16px;
+        top: 16px;
         right: 16px;
-        width: 44px;
-        height: 44px;
-        display: flex;
-        justify-content: center;
-        align-items: center; 
-        border-radius: 100px;
-        border: none;
-        cursor: pointer;
-        font-size: 18px;
-        z-index: 1;
-        opacity: .5;
-        color: white;
-        mix-blend-mode: multiply;
-    }
-
-    &__imageUpload {
-        z-index: 2;
-        position: absolute;
-        bottom: 16px;
-        right: 16px;
-        width: 44px;
-        height: 44px;
-        opacity: 0;
-        height: 100%;
-        width: 100%;
-        cursor: pointer;
-    }
-
-    &__item {
-        height: 3rem;
-        margin-bottom: 8px;
-        font-size: .875em;
-    }
-
-    &.show {
-        transform: translateX(0%);
-        width: 100%;
-    }
-
-    // form {
-    //     display: none;
-    // }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
     }
 }
 
-@keyframes bounceIn {
-    0% { transform: scale(.88); }
-    20% { transform: scale(1.12); }
-    40% { transform: scale(.94); }
-    60% { transform: scale(1.06); }
-    80% { transform: scale(.98); }
-    100% { transform: scale(1); }
-  }
+/// Utility classes
+
+.u-mar-lr_auto {
+    margin-left: auto;
+    margin-right: auto;
+};
+
+.u-mar-l_auto {
+    margin-left: auto;
+}
