--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,33 @@
 :root {
   --brand: #002831;
-  --brand_lighter: #EAF1F3;
+  --color_outline: #2D9CDB;
+  --color_gray: #BDBDBD;
+  --color_yellow: #FDD3A6;
+  --color_text: #333333;
+  --color_border: #D9DFE0;
+  --color_background: #fcfcfc;
+  --brand_lighter: #E3F2F5;
   --navHeight: 104px;
   --detailsWidth: 352px;
   --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
   --iconButtonSize: 44px;
   --color_border: #D9DFE0;
-  --leafSize: 96px; }
+  --leafSize: 96px;
+  --profileImageSize: 128px;
+  --leafSpacing: 32px;
+  --leafShadow: 0px 2px 16px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.07), 0px 4px 24px rgba(0, 0, 0, 0.08);
+  --leafCaptionShadow: 0 0 12px rgba(0,0,0, .2); }
 
 * {
   box-sizing: border-box; }
 
 body {
-  font-family: 'Lato', san-serif;
-  display: flex;
+  font-family: 'Lato', sans-serif;
   flex-direction: column;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  color: var(--color_text); }
 
 ul,
 ol {
@@ -33,11 +42,18 @@ h5:first-child,
 h6:first-child {
   margin-top: 0; }
 
+h6 {
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1;
+  font-size: 12px;
+  color: var(--brand); }
+
 .ifAuth--hide {
   display: none; }
 
 .ifAuth--show {
-  display: inherit; }
+  display: unset; }
 
 nav {
   display: flex;
@@ -52,39 +68,70 @@ nav {
   align-items: center;
   padding-left: 32px;
   padding-right: 32px; }
+  nav a {
+    color: white; }
 
 #mainContent {
   display: flex;
   position: relative;
-  flex: 1; }
+  flex: 1;
+  transition: background-color 0.2s ease-in-out; }
   #mainContent:not(.showDetails) #familyTree {
     margin-right: 0; }
   #mainContent:not(.showDetails) #detailsPanel {
     right: calc( (var(--detailsWidth) * -1 )); }
-  #mainContent.showDetails #familyTree {
-    margin-right: var(--detailsWidth); }
-  #mainContent.showDetails #detailsPanel {
-    right: 0; }
+  #mainContent.showDetails {
+    background-color: var(--color_background); }
+    #mainContent.showDetails #familyTree {
+      margin-right: var(--detailsWidth); }
+    #mainContent.showDetails #detailsPanel {
+      right: 0; }
 
 #familyTree {
-  box-shadow: 0 0 0 4px #ffb3b3 inset;
   flex: 1;
   transition: margin-right 0.2s ease-in-out;
-  overflow: scroll; }
+  overflow: scroll;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
 
 #detailsPanel {
   position: fixed;
   width: 100%;
+  overflow: scroll;
   max-width: var(--detailsWidth);
   height: calc(100vh - var(--navHeight));
   padding: 32px;
   transition: right 0.2s ease-in-out;
   top: var(--navHeight);
   bottom: 0;
-  border-radius: 8px 0 0 8px;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2), 0 0 4px rgba(0, 0, 0, 0.1);
   z-index: 99;
-  background-color: white; }
+  background-color: white;
+  background-image: url("../assets/img/wavy-sm.svg");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: contain;
+  background-size: 100%;
+  box-shadow: 0 0 0 1px var(--color_border) inset; }
+
+.detailsPanel__actions {
+  display: flex; }
+
+.detailsPanel__icon {
+  width: 24px;
+  text-align: center;
+  font-size: 20px;
+  color: var(--color_gray);
+  vertical-align: middle; }
+
+.detailsPanel__profileImage {
+  max-width: var(--profileImageSize);
+  width: var(--profileImageSize);
+  height: var(--profileImageSize);
+  border-radius: 8px;
+  display: block;
+  background-color: lightgray;
+  background-color: var(--color_yellow); }
 
 #treeMenu {
   border: 1px solid green;
@@ -93,22 +140,53 @@ nav {
   right: 0;
   max-width: 400px;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  display: flex;
+  flex-direction: column; }
   #treeMenu .primary {
     border: 1px solid purple; }
   #treeMenu .active {
-    color: darkslateblue; }
+    text-decoration: underline; }
 
 .leaf {
   height: var(--leafSize);
   width: var(--leafSize);
   border-radius: 50%;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
-  cursor: pointer; }
-  .leaf.active {
-    box-shadow: 0 0 0 8px blue; }
+  box-shadow: var(--leafShadow);
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin: var(--leafSpacing);
+  transition: transform 0.2s ease-in-out;
+  background-color: var(--color_yellow); }
+  .leaf:before {
+    content: "";
+    position: absolute;
+    width: calc(var(--leafSize) + 12px);
+    height: calc(var(--leafSize) + 12px);
+    top: -6px;
+    border-radius: 100px;
+    box-shadow: 0 0 0 4px var(--color_outline);
+    opacity: 0;
+    transform: scale(0.8);
+    transition: transform 0.2s ease-in-out; }
+  .leaf:active {
+    transform: scale(0.9); }
+  .leaf.active:before {
+    opacity: 1;
+    transform: scale(1); }
   .leaf > * {
     pointer-events: none; }
+  .leaf .leaf_caption {
+    position: absolute;
+    padding: 8px 12px;
+    border-radius: 8px;
+    bottom: -12px;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: var(--leafShadow);
+    font-size: 14px; }
 
 @media screen and (max-width: 640px) {
   :root {
@@ -148,8 +226,8 @@ button,
 .iconButton {
   padding: 12px 16px;
   background-color: var(--brand);
-  border-radius: 8px;
   color: white;
+  border-radius: 8px;
   border: 0px solid transparent;
   display: flex;
   justify-content: center;
@@ -220,5 +298,27 @@ button,
 
 .u-mar-l_auto {
   margin-left: auto; }
+
+.u-mar-r_2 {
+  margin-right: 16px; }
+
+.u-mar-b_2 {
+  margin-bottom: 16px; }
+
+.u-mar-b_3 {
+  margin-bottom: 24px; }
+
+.u-mar-b_4 {
+  margin-bottom: 32px; }
+
+.u-mar-b_5 {
+  margin-bottom: 40px; }
+
+.u-ta_center {
+  text-align: center; }
+
+.header_m {
+  font-weight: 900;
+  font-size: 24px; }
 
 /*# sourceMappingURL=style.css.map */
