--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,13 +2,23 @@ $detailsRevealTiming: .2s;
 
 :root {
     --brand: #002831;
-    --brand_lighter: #EAF1F3;
+    --color_outline: #2D9CDB;
+    --color_gray: #BDBDBD;
+    --color_yellow: #FDD3A6;
+    --color_text: #333333;
+    --color_border: #D9DFE0;
+    --color_background: #fcfcfc;
+    --brand_lighter: #E3F2F5;
     --navHeight: 104px;
     --detailsWidth: 352px;
     --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
     --iconButtonSize: 44px;
     --color_border: #D9DFE0;
     --leafSize: 96px;
+    --profileImageSize: 128px;
+    --leafSpacing: 32px;
+    --leafShadow: 0px 2px 16px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.07), 0px 4px 24px rgba(0, 0, 0, 0.08);
+    --leafCaptionShadow: 0 0 12px rgba(0,0,0, .2);
 }
 
 * {
@@ -16,13 +26,12 @@ $detailsRevealTiming: .2s;
 }
 
 body {
-    font-family: 'Lato', san-serif;
-    display: flex;
+    font-family: 'Lato', sans-serif;
     flex-direction: column;
     padding: 0;
     margin: 0;
-    display: flex;
     flex-direction: column;
+    color: var(--color_text);
 };
 
 ul,
@@ -42,12 +51,20 @@ h6 {
     }
 }
 
+h6 {
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1;
+    font-size: 12px;
+    color: var(--brand);
+}
+
 .ifAuth--hide {
     display: none;
 }
 
 .ifAuth--show {
-    display: inherit;
+    display: unset;
 }
 
 nav {
@@ -63,12 +80,17 @@ nav {
     align-items: center;
     padding-left: 32px;
     padding-right: 32px;
+
+    a {
+        color: white;
+    }
 }
 
 #mainContent {
     display: flex;
     position: relative;
     flex: 1;
+    transition: background-color $detailsRevealTiming ease-in-out;
     
     &:not(.showDetails) {
         #familyTree {
@@ -81,6 +103,8 @@ nav {
     }
 
     &.showDetails {
+        background-color: var(--color_background);
+
         #familyTree {
             margin-right: var(--detailsWidth);
         }
@@ -92,25 +116,58 @@ nav {
 }
 
 #familyTree {
-    box-shadow: 0 0 0 4px lighten(red, 35%) inset;
     flex: 1;
     transition: margin-right $detailsRevealTiming ease-in-out;
     overflow: scroll;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #detailsPanel {
     position: fixed;
     width: 100%;
+    overflow: scroll;
     max-width: var(--detailsWidth);
     height: calc(100vh - var(--navHeight));
     padding: 32px;
     transition: right$detailsRevealTiming ease-in-out;
     top: var(--navHeight);
     bottom: 0;
-    border-radius: 8px 0 0 8px;
-    box-shadow: 0 0 12px rgba(black, .2), 0 0 4px rgba(black, .1);
     z-index: 99;
     background-color: white;
+    background-image: url("../assets/img/wavy-sm.svg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: contain;
+    background-size: 100%;
+    box-shadow: 0 0 0 1px var(--color_border) inset;
+}
+
+.detailsPanel__actions {
+    display: flex;
+}
+
+// .detailsPanel__item {
+//     display: flex;
+// }
+
+.detailsPanel__icon {
+    width: 24px;
+    text-align: center;
+    font-size: 20px;
+    color: var(--color_gray);
+    vertical-align: middle;
+}
+
+.detailsPanel__profileImage {
+    max-width: var(--profileImageSize);
+    width: var(--profileImageSize);
+    height: var(--profileImageSize);
+    border-radius: 8px;
+    display: block;
+    background-color: lightgray;
+    background-color: var(--color_yellow);
 }
 
 #treeMenu {
@@ -121,13 +178,15 @@ nav {
     max-width: 400px;
     margin: 0 auto;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 
     .primary {
         border: 1px solid purple;
     }
 
     .active {
-        color: darkslateblue;
+        text-decoration: underline;
     }
 }
 
@@ -135,15 +194,50 @@ nav {
     height: var(--leafSize);
     width: var(--leafSize);
     border-radius: 50%;
-    box-shadow: 0 0 12px rgba(black, .2);
+    box-shadow: var(--leafShadow);
     cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin: var(--leafSpacing);
+    transition: transform $detailsRevealTiming ease-in-out;
+    background-color: var(--color_yellow);
 
-    &.active {
-        box-shadow: 0 0 0 8px blue;
+    &:before {
+        content: "";
+        position: absolute;
+        width: calc(var(--leafSize) + 12px);
+        height: calc(var(--leafSize) + 12px);
+        top: -6px;
+        border-radius: 100px;
+        box-shadow: 0 0 0 4px var(--color_outline);
+        opacity: 0;
+        transform: scale(.8);
+        transition: transform $detailsRevealTiming ease-in-out;
+    }
+
+    &:active {
+        transform: scale(.9);
+    }
+
+    &.active:before {
+        opacity: 1;
+        transform: scale(1);
     }
 
     > * {
         pointer-events: none;
+    }
+
+    .leaf_caption {
+        position: absolute;
+        padding: 8px 12px;
+        border-radius: 8px;
+        bottom: -12px;
+        margin: 0 auto;
+        background-color: white;
+        box-shadow: var(--leafShadow);
+        font-size: 14px;
     }
 }
 
@@ -204,8 +298,8 @@ button,
 .iconButton {
     padding: 12px 16px;
     background-color: var(--brand);
-    border-radius: 8px;
     color: white;
+    border-radius: 8px;
     border: 0px solid transparent;
     display: flex;
     justify-content: center;
@@ -301,4 +395,34 @@ button,
 
 .u-mar-l_auto {
     margin-left: auto;
+}
+
+.u-mar-r_2 {
+    margin-right: 16px;
+}
+
+.u-mar-b_2 {
+    margin-bottom: 16px;
+}
+
+.u-mar-b_3 {
+    margin-bottom: 24px;
+}
+
+.u-mar-b_4 {
+    margin-bottom: 32px;
+}
+
+.u-mar-b_5 {
+    margin-bottom: 40px;
+}
+
+.u-ta_center {
+    text-align: center;
+}
+
+/// Header classes
+.header_m {
+    font-weight: 900;
+    font-size: 24px;
 }
