--- a/public/css/style.css
+++ b/public/css/style.css
@@ -314,6 +314,12 @@ button,
 .u-mar-b_5 {
   margin-bottom: 40px; }
 
+.u-mar-b_6 {
+  margin-bottom: 48px; }
+
+.u-mar-b_7 {
+  margin-bottom: 56px; }
+
 .u-ta_center {
   text-align: center; }
 
