--- a/scss/index.scss
+++ b/scss/index.scss
@@ -417,6 +417,14 @@ button,
     margin-bottom: 40px;
 }
 
+.u-mar-b_6 {
+    margin-bottom: 48px;
+}
+
+.u-mar-b_7 {
+    margin-bottom: 56px;
+}
+
 .u-ta_center {
     text-align: center;
 }
