--- a/scss/index.scss
+++ b/scss/index.scss
@@ -72,7 +72,6 @@ nav {
     background-color: var(--brand);
     height: var(--navHeight);
     max-height: var(--navHeight);
-    overflow: hidden;
     position: sticky;
     top: 0;
     z-index: 999;
@@ -136,12 +135,22 @@ nav {
     bottom: 0;
     z-index: 99;
     background-color: white;
-    background-image: url("../assets/img/wavy-sm.svg");
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: contain;
-    background-size: 100%;
     box-shadow: 0 0 0 1px var(--color_border) inset;
+
+    &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        background-image: url("../assets/img/wavy-sm.svg");
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: contain;
+        background-size: 100%;
+        height: 400px;
+        z-index: -1;
+    }
 }
 
 .detailsPanel__actions {
@@ -170,16 +179,58 @@ nav {
     background-color: var(--color_yellow);
 }
 
-#treeMenu {
-    border: 1px solid green;
+.branch {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.descendants,
+.spouses {
+    display: flex;
+    flex-direction: row;
+}
+
+#treeMenu__currentTree {
+    font-size: 20px;
+    font-weight: 900;
+    padding: 16px 24px;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:hover {
+        box-shadow: 0 0 0 2px rgba(white, .25);
+    }
+
+    &:active {
+        background-color: rgba(white, .05);
+    }
+}
+
+#treeMenu__options {
     position: absolute;
-    left: 0;
-    right: 0;
-    max-width: 400px;
+    display: none;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 100%;
+    min-width: 375px;
+    background-color: white;
+    border-radius: 8px;
+    color: initial;
+    top: calc(100% + 8px);
+    box-shadow: var(--leafShadow);
+}
+
+#treeMenu {
+    position: absolute;
     margin: 0 auto;
     text-align: center;
     display: flex;
     flex-direction: column;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
 
     .primary {
         border: 1px solid purple;
@@ -214,6 +265,10 @@ nav {
         opacity: 0;
         transform: scale(.8);
         transition: transform $detailsRevealTiming ease-in-out;
+    }
+
+    &:hover {
+        transform: scale(1.05);
     }
 
     &:active {
@@ -395,6 +450,10 @@ button,
 
 .u-mar-l_auto {
     margin-left: auto;
+}
+
+.u-mar-l_2 {
+    margin-left: 16px;
 }
 
 .u-mar-r_2 {
