--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
   --color_text: #333333;
   --color_border: #D9DFE0;
   --color_background: #fcfcfc;
+  --color_danger: #B90B00;
   --brand_lighter: #E3F2F5;
   --navHeight: 104px;
   --detailsWidth: 352px;
@@ -32,7 +33,8 @@ body {
 ul,
 ol {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  list-style-type: none; }
 
 h1:first-child,
 h2:first-child,
@@ -49,13 +51,7 @@ h6 {
   font-size: 12px;
   color: var(--brand); }
 
-.ifAuth--hide {
-  display: none; }
-
-.ifAuth--show {
-  display: unset; }
-
-nav {
+.mainNav {
   display: flex;
   background-color: var(--brand);
   height: var(--navHeight);
@@ -67,7 +63,7 @@ nav {
   align-items: center;
   padding-left: 32px;
   padding-right: 32px; }
-  nav a {
+  .mainNav a {
     color: white; }
 
 #mainContent {
@@ -110,7 +106,7 @@ nav {
   #detailsPanel:before {
     content: '';
     position: absolute;
-    left: 0;
+    left: 1px;
     right: 0;
     top: 0;
     background-image: url("../assets/img/wavy-sm.svg");
@@ -133,12 +129,22 @@ nav {
 
 .detailsPanel__profileImage {
   max-width: var(--profileImageSize);
-  width: var(--profileImageSize);
-  height: var(--profileImageSize);
-  border-radius: 8px;
-  display: block;
-  background-color: lightgray;
-  background-color: var(--color_yellow); }
+  height: var(--profileImageSize); }
+  .detailsPanel__profileImage img {
+    max-width: var(--profileImageSize);
+    width: var(--profileImageSize);
+    height: var(--profileImageSize);
+    border-radius: 8px;
+    display: block;
+    background-color: lightgray;
+    background-color: var(--color_yellow); }
+
+.formActions {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+  width: calc( var(--detailsWidth) - 1px); }
 
 .branch {
   display: flex;
@@ -150,20 +156,23 @@ nav {
   display: flex;
   flex-direction: row; }
 
+.spouses .leaf:last-child:not(:first-child) {
+  background-color: green; }
+
 #treeMenu__currentTree {
   font-size: 20px;
   font-weight: 900;
   padding: 16px 24px;
   border-radius: 4px;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: .1s ease-in-out; }
   #treeMenu__currentTree:hover {
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.25); }
   #treeMenu__currentTree:active {
-    background-color: rgba(255, 255, 255, 0.05); }
+    background-color: rgba(255, 255, 255, 0.06);
+    transform: scale(0.98); }
 
 #treeMenu__options {
-  position: absolute;
-  display: none;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -184,8 +193,6 @@ nav {
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%); }
-  #treeMenu .primary {
-    border: 1px solid purple; }
   #treeMenu .active {
     text-decoration: underline; }
 
@@ -253,16 +260,53 @@ nav {
     margin-right: 0; }
   #mainContent.showDetails #detailsPanel {
     right: unset;
-    bottom: 0; } }
+    bottom: 0; }
+
+  .dropdown {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: initial;
+    z-index: 999; } }
 input[type=text],
 input[type=email],
 input[type=password],
 input[type=number],
+input[type=date],
 select {
-  padding: 16px 12px;
-  border: 1px solid var(--color_border);
+  padding: 12px 16px;
+  box-shadow: 0 0 0 1px var(--color_border);
   border-radius: 8px;
-  font-size: 16px; }
+  font-size: 16px;
+  border: 0px solid transparent; }
+  input[type=text]:hover,
+  input[type=email]:hover,
+  input[type=password]:hover,
+  input[type=number]:hover,
+  input[type=date]:hover,
+  select:hover {
+    box-shadow: 0 0 0 2px var(--color_border); }
+  input[type=text]:focus,
+  input[type=email]:focus,
+  input[type=password]:focus,
+  input[type=number]:focus,
+  input[type=date]:focus,
+  select:focus {
+    outline: 0px solid transparent;
+    box-shadow: 0 0 0 2px var(--color_outline); }
+
+label {
+  font-weight: bold;
+  font-size: 15px; }
+
+.inputGroup {
+  display: flex;
+  align-items: center; }
+  .inputGroup + .inputGroup {
+    margin-top: 16px; }
+  .inputGroup:hover label {
+    font-weight: 900; }
 
 .button,
 button,
@@ -276,17 +320,35 @@ button,
   justify-content: center;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px; }
+  font-size: 15px;
+  transition: all .1s ease-in-out; }
+  .button:hover,
+  button:hover,
+  .iconButton:hover {
+    transform: scale(1.05); }
+  .button:focus,
+  button:focus,
+  .iconButton:focus {
+    outline: 4px solid var(--color_outline);
+    border-radius: 8px; }
   .button.secondary,
   button.secondary,
   .iconButton.secondary {
     background-color: var(--brand_lighter);
     color: var(--brand); }
+    .button.secondary:hover,
+    button.secondary:hover,
+    .iconButton.secondary:hover {
+      background-color: rgba(0, 0, 0, 0.05); }
   .button.white,
   button.white,
   .iconButton.white {
     background-color: white;
     color: var(--brand); }
+  .button.danger,
+  button.danger,
+  .iconButton.danger {
+    background-color: var(--color_danger); }
 
 .iconButton {
   padding: 0;
@@ -296,6 +358,8 @@ button,
   font-size: 20px;
   border-radius: 50%;
   align-items: center; }
+  .iconButton:focus {
+    border-radius: 50%; }
   .iconButton i {
     line-height: var(--iconButtonSize);
     pointer-events: none; }
@@ -335,6 +399,54 @@ button,
     top: 16px;
     right: 16px; }
 
+.dropdown {
+  box-shadow: var(--leafShadow);
+  border-radius: 8px;
+  background-color: white;
+  padding: 8px 0; }
+  .dropdown__item {
+    padding: 12px 20px;
+    font-weight: bold; }
+    .dropdown__item:hover {
+      background-color: rgba(0, 40, 49, 0.08);
+      cursor: pointer; }
+    .dropdown__item:active {
+      background-color: rgba(0, 40, 49, 0.04);
+      cursor: pointer; }
+  .dropdown__label {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    pointer-events: none;
+    color: rgba(0, 40, 49, 0.5);
+    font-weight: bold;
+    font-size: 12px; }
+    .dropdown__label:hover {
+      background-color: inherit;
+      cursor: intiial; }
+    .dropdown__label:active {
+      background-color: inherit; }
+
+.u-p_fixed {
+  position: fixed; }
+
+.u-pe_none {
+  pointer-events: none; }
+
+.u-p_absolute {
+  position: absolute; }
+
+.u-d_none {
+  display: none; }
+
+.u-d_flex {
+  display: flex; }
+
+.u-pad_4 {
+  padding: 16px; }
+
+.u-pad-b_10 {
+  padding-bottom: 80px; }
+
 .u-mar-lr_auto {
   margin-left: auto;
   margin-right: auto; }
@@ -347,6 +459,12 @@ button,
 
 .u-mar-r_2 {
   margin-right: 16px; }
+
+.u-mar-b_0 {
+  margin-bottom: 0px; }
+
+.u-mar-b_1 {
+  margin-bottom: 8px; }
 
 .u-mar-b_2 {
   margin-bottom: 16px; }
@@ -368,6 +486,33 @@ button,
 
 .u-ta_center {
   text-align: center; }
+
+.u-w_full {
+  width: 100%; }
+
+.u-w_25perc {
+  width: 25%; }
+
+.u-w_33perc {
+  width: 33.333%; }
+
+.u-flex_1 {
+  flex: 1; }
+
+.u-o_75 {
+  opacity: .75; }
+
+.u-o_50 {
+  opacity: .5; }
+
+.u-o_25 {
+  opacity: .25; }
+
+.u-c_brand {
+  color: var(--brand); }
+
+.u-c_danger {
+  color: var(--color_danger); }
 
 .header_m {
   font-weight: 900;
