--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,9 +15,11 @@
   --color_border: #D9DFE0;
   --leafSize: 96px;
   --profileImageSize: 128px;
+  --leafCaptionOffset: 12px;
   --leafSpacing: 32px;
   --leafShadow: 0px 2px 16px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.07), 0px 4px 24px rgba(0, 0, 0, 0.08);
-  --leafCaptionShadow: 0 0 12px rgba(0,0,0, .2); }
+  --leafCaptionShadow: 0 0 12px rgba(0,0,0, .2);
+  --detailsPanelDecorationTopOffset: 0; }
 
 * {
   box-sizing: border-box; }
@@ -75,12 +77,10 @@ h6 {
     margin-right: 0; }
   #mainContent:not(.showDetails) #detailsPanel {
     right: calc( (var(--detailsWidth) * -1 )); }
-  #mainContent.showDetails {
-    background-color: var(--color_background); }
-    #mainContent.showDetails #familyTree {
-      margin-right: var(--detailsWidth); }
-    #mainContent.showDetails #detailsPanel {
-      right: 0; }
+  #mainContent.showDetails #familyTree {
+    margin-right: var(--detailsWidth); }
+  #mainContent.showDetails #detailsPanel {
+    right: 0; }
 
 #familyTree {
   flex: 1;
@@ -88,7 +88,8 @@ h6 {
   overflow: scroll;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  position: relative; }
 
 #detailsPanel {
   position: fixed;
@@ -108,7 +109,7 @@ h6 {
     position: absolute;
     left: 1px;
     right: 0;
-    top: 0;
+    top: var(--detailsPanelDecorationTopOffset);
     background-image: url("../assets/img/wavy-sm.svg");
     background-repeat: no-repeat;
     background-position: top;
@@ -154,10 +155,8 @@ h6 {
 .descendants,
 .spouses {
   display: flex;
-  flex-direction: row; }
-
-.spouses .leaf:last-child:not(:first-child) {
-  background-color: green; }
+  flex-direction: row;
+  position: relative; }
 
 #treeMenu__currentTree {
   font-size: 20px;
@@ -220,7 +219,8 @@ h6 {
     transform: scale(0.8);
     transition: transform 0.2s ease-in-out; }
   .leaf:hover {
-    transform: scale(1.05); }
+    transform: scale(1.05);
+    z-index: 1; }
   .leaf:active {
     transform: scale(0.9); }
   .leaf.active:before {
@@ -232,16 +232,52 @@ h6 {
     position: absolute;
     padding: 8px 12px;
     border-radius: 8px;
-    bottom: -12px;
+    bottom: calc( var(--leafCaptionOffset) * -1 );
     margin: 0 auto;
     background-color: white;
     box-shadow: var(--leafShadow);
     font-size: 14px; }
 
+.parentToChild__middleBar,
+.childToParent__middleBar,
+.spouseToSpouse__line,
+.parentToChildren__downLine {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  z-index: -1;
+  background-color: var(--color_border);
+  transition: all .2s ease-in-out;
+  transform: scale(0.95);
+  height: 1px;
+  pointer-events: none; }
+
+.spouseToSpouse__line {
+  top: calc( var(--leafSize) / 2 + var(--leafSpacing) );
+  bottom: 0;
+  width: calc( 100% - var(--leafSize)); }
+
+.parentToChild__middleBar {
+  top: 0;
+  width: calc( 100% - calc( var(--leafSpacing) + var(--leafSize) )); }
+
+.childToParent__middleBar {
+  width: 1px;
+  height: var(--leafSpacing);
+  top: calc( var(--leafSpacing) * -1); }
+
+.parentToChildren__downLine {
+  width: 1px;
+  height: calc( var(--leafSize) - calc( var(--leafSpacing) / 2 ));
+  bottom: 0; }
+
 @media screen and (max-width: 640px) {
   :root {
     --navHeight: 176px;
-    --detailsWidth: 100%; }
+    --detailsWidth: 100%;
+    --detailsPanelDecorationTopOffset: -48px; }
 
   #familyTree {
     width: 100%; }
@@ -321,11 +357,17 @@ button,
   cursor: pointer;
   font-weight: bold;
   font-size: 15px;
-  transition: all .1s ease-in-out; }
+  transition: all .1s ease-in-out;
+  text-decoration: none; }
   .button:hover,
   button:hover,
   .iconButton:hover {
     transform: scale(1.05); }
+  .button:active,
+  button:active,
+  .iconButton:active {
+    transform: scale(1.02);
+    transition: all 0s ease-in-out; }
   .button:focus,
   button:focus,
   .iconButton:focus {
